# axoshub-sistema-Lp

./: .gitignore  Dockerfile  README.md  nixpacks.toml  package.json
apps/solara-connect/: .env.example  package.json  test-gemini.mjs  test-webhook.mjs
apps/solara-connect/app/: central-app.tsx  data.ts  globals.css  layout.tsx  medical-rag.ts  page.tsx  supabase-client.ts
apps/solara-connect/app/api/runtime/: route.ts
apps/solara-connect/app/api/solara/: solara-gemini.ts
apps/solara-connect/app/login/: page.tsx
apps/solara-connect/app/second-brain/: page.tsx  second-brain.module.css
apps/solara-connect/src/components/KnowledgeBase/: MedicalGraph.tsx
apps/solara-mei/: next.config.ts  package.json
apps/solara-mei/app/: globals.css  layout.tsx
apps/solara-mei/app/(app)/: app-shell.tsx  layout.tsx  mei-data.ts  mei-store.ts  mei-utils.ts
apps/solara-mei/app/(app)/clientes/: page.tsx
apps/solara-mei/app/login/: page.tsx
docs/: actives-certus-product.md  pagbank-setup.md  privacy.md  setup.md  supabase-schema.md  supabase-schema.sql  supabase-seed.sql  supabase_saas.sql
docs/db/: pagbank.sql  plans_rls_lgpd.sql  rls.sql
scripts/: check-environment.ps1  cron-evolution-cleanup.mjs  cron-solara-notifications.mjs  cron-solara-nps.mjs
services/data-platform/: README.md  pyproject.toml
services/data-platform/src/solara_data/: __init__.py  kpis.py
services/solara-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/solara-api/app/: __init__.py  celery_app.py  main.py  tasks.py
supabase/migrations/: 0001_medical_rag_base.sql
(+22 files in other folders)
