[project]
name = "solara-api"
version = "0.1.0"
description = "FastAPI backend for Solara Connect"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "supabase>=2.15.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "celery>=5.3.6",
  "redis>=5.0.1",
  "flower>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

